# CNaturalMouseMotion

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.MD
Example/: CMakeLists.txt  main.cpp
NaturalMouseMotion/: CMakeLists.txt  DefaultNature.h  DefaultProvider.h  Flow.h  FlowTemplates.h  FlowUtils.h  Logger.h  MotionNature.h  Move.h  MovementFactory.h  NaturalMouseMotion.h
Test/: CMakeLists.txt  DefaultOvershootManagerTest.cpp  FlowTest.cpp  FlowUtilsTest.cpp  Mock.cpp  MockStructs.h  MovementFactoryTest.cpp
